<resources>
    <string name="app_name">Gestion Comerciale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Safe Soft</string>
    <string name="nav_header_subtitle">Administrateur</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="catalogue">Catalogue</string>
    <string name="commande">Commande</string>
    <string name="client">Client</string>
    <string name="organisme">Organisme</string>
    <string name="login">Login</string>
    <string name="login_info">Administrateur</string>
    <string name="action_info">Infos</string>
    <string name="sing_in">Sing-in</string>
    <string name="Titre">Titre :</string>
    <string name="categorie">Catégorie :</string>
    <string name="stock">Stock :</string>
    <string name="prix">Prix :</string>
    <string name="description">Déscriptoin :</string>
    <string name="Login_User">Adminidtrateur</string>
    <string name="Titre_produit">Titre du produit : </string>
    <string name="date_com">Date de commande : </string>
    <string name="date_exp">Date d\'expiration : </string>
    <string name="quantite">Quantité : </string>
    <string name="quantite_totale">Quantité totale : </string>
    <string name="modifier">Modifier</string>
    <string name="retour">Retour</string>
    <string name="accueil">Accueil</string>
    <string name="supprimer">Supprimer</string>
    <string name="reserver">Résérvations</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint">Nom d\'utilisateur</string>
    <string name="hint_pwd">Mot de passe</string>

</resources>