<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info_org.Info_orgFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/baccueil_org_boutton_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/accueil_org_boutton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/accueil" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commandeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titre_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titre_produit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/Titre_produit"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/categ_comm_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categorie_commande"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/categorie"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_com"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_commande"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/date_com"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_exp_tayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_exp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/date_exp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/qt_produit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/qt_produit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/quantite"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/qt_totale_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/qt_totale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/quantite_totale"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_commande_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <ImageView
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_125sdp"

                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:src="@drawable/ic_delivery_box" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/boutton_detail_commande_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|top">


            <Button
                android:id="@+id/modifier_org"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/modifier" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>








</ScrollView>


</FrameLayout>